form will send now, but needs to be modified so that it is disabled without recaptcha being completed

--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -13,7 +13,7 @@
   align-items: $a-items;
 }
 
-/*links */
+/*link colors */
 @mixin links($color, $vcolor, $hcolor, $acolor) {
   color: $color;
     &:visited { color: $vcolor;}
