--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,15 +1,15 @@
-/* COLORS */
-$primary-color: #A0186C;
-$nav-color: rgba(159, 24, 108, 0.92);
+$primary-color: #9f186c;
+$h1-color: #A0186C;
 
 /* FOOTER */
-$footer-purple: #7B4C73;
-$icon-purple: #AC88AD;
+$footer-background-color: #f6f6f6;
+$footer-text-color: #5e3858;
+$links-icon-f: #AC88AD;
+$links-icon-fh: #330d22;
 
-/* BACKGROUND */
-$pages-bgcolor: #F8F9F9;
-$bg-overlay: rgba(0, 0, 0, 0.15);
+/* HOME */
+$home-bgoverlay: rgba(0, 0, 0, 0.15);
 
-/* BUTTONS */
+/* BUTTON COLORS */
 $button-primary: #E345A2;
 $button-hover: #CF3F94;
