--- a/sass/component/_header.scss
+++ b/sass/component/_header.scss
@@ -1,28 +1,30 @@
 @import "../base/variables";
 
 #mobnav {
-    background-color: rgba(0, 0, 0, 0.15) !important;
+  background-color: $home-bgoverlay !important;
 
-    .navbar-brand {
+  .navbar-brand {
+    color: #fff;
+    margin-right: 0;
+
+    img {
+      width: 20%;
+      margin-right: 20px;
+    }
+  }
+
+  .navbar-toggler {
+    color: #fff;
+    border-color: rgba(0, 0, 0, 0);
+
+    .navbar-toggler-icon {
+      background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgb(255, 255, 255)' stroke-width='3' stroke-linecap='straight' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+    }
+  }
+
+  #navbarNavAltMarkup {
+    a.nav-item.nav-link.active {
       color: #fff;
-      margin-right: 0px;
-      img {
-        width: 20%;
-        margin-right: 20px;
-      }
     }
-
-    .navbar-toggler {
-      color: #fff;
-      border-color: rgba(0, 0, 0, 0);
-      .navbar-toggler-icon {
-        background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgb(255, 255, 255)' stroke-width='3' stroke-linecap='straight' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-      }
-    }
-
-    #navbarNavAltMarkup {
-      a.nav-item.nav-link.active {
-        color: #fff;
-      }
-    }
+  }
 }
