--- a/sass/layout/_home-main.scss
+++ b/sass/layout/_home-main.scss
@@ -1,17 +1,12 @@
-@import "../base/variables";
-@import "../base/mixins";
-
 body {
   #deskintro {
     display: none;
   }
-
   max-width: 640px;
   min-width: 320px;
   height: auto;
   margin: 0 auto;
   overflow-x: hidden;
-  display: flex;
   flex-flow: column nowrap;
   @include flex(flex, column nowrap, start, stretch);
   @include bg-img("../img/home-mob.png", no-repeat, auto);
@@ -36,7 +31,7 @@ body {
       #intro-overlay {
         max-width: 100%;
         height: 600px;
-        background-color: $bg-overlay;
+        background-color: $home-bgoverlay;
         text-align: center;
         display: table;
 
@@ -51,7 +46,6 @@ body {
           display: table-cell;
         }
       }
-
     }
   }
 
@@ -67,9 +61,11 @@ body {
         line-height: 2;
         margin: 0 auto;
         float: none;
+
         .blockquote {
           font-size: 1rem;
         }
+
         footer {
           background-color: white;
         }
@@ -81,16 +77,14 @@ body {
     }
   }
 }
-
-
 /* ================================================================= */
-
 /*TABLET PORTRAIT*/
 @media only screen and (min-width: 628px) and (max-width: 1024px) {
   body {
     max-width: 1024px;
     min-width: 628px;
     @include bg-img("../img/home.png", no-repeat, auto);
+
     main {
       #intro {
         #intro-overlay {
@@ -101,42 +95,34 @@ body {
       }
     }
 
-
     #testimonials {
       .carousel-inner {
         height: 450px;
-        padding: 100px 0 80px 0;
-        }
+        padding: 100px 0 80px;
       }
     }
   }
-
-  /*TABLET LANDSCAPE*/
-  @media only screen and (min-width: 628px) and (max-width: 1024px) and (orientation: landscape) {
-
-    #testimonials {
-      .carousel-inner {
-        padding: 130px 0 80px 0;
-        }
-      }
+}
+/*TABLET LANDSCAPE*/
+@media only screen and (min-width: 628px) and (max-width: 1024px) and (orientation: landscape) {
+  #testimonials {
+    .carousel-inner {
+      padding: 130px 0 80px;
+    }
   }
-
-
-  /*DESKTOP*/
+}
+/*DESKTOP*/
 @media only screen and (min-width: 1025px) and (max-width: 1280px) {
-
   body {
-
     max-width: 1280px;
     min-width: 1025px;
     @include bg-img("../img/home.png", no-repeat, auto);
     @include flex(flex, column nowrap, flex-start, stretch);
 
     main {
-
       #intro {
         height: 670px;
-        background-color: $bg-overlay;
+        background-color: $home-bgoverlay;
         @include flex(flex, row nowrap, flex-end, center);
 
         #intro-overlay {
@@ -144,18 +130,18 @@ body {
         }
 
         #deskintro {
-            display: block;
-            width: 50%;
-            margin: 0;
-            padding: 0 50px 0 0;
-            text-align: right;
-            line-height: 1.7;
-            font-size: 3.75rem;
-            font-weight: bold;
-            color: white;
-          }
+          display: block;
+          width: 50%;
+          margin: 0;
+          padding: 0 50px 0 0;
+          text-align: right;
+          line-height: 1.7;
+          font-size: 3.75rem;
+          font-weight: bold;
+          color: white;
         }
       }
+    }
 
     #testimonials {
       .carousel-inner {
@@ -170,49 +156,53 @@ body {
     }
   }
 }
-
 /*DESKTOP HI-RES*/
 @media only screen and (min-width: 1281px) and (max-width: 2500px) {
+  html {
+    max-width: 100vw;
+    margin: 0 auto;
 
-html {
-  max-width: 100vw;
-  margin: 0 auto;
+    body {
+      max-width: 2500px;
+      min-width: 1281px;
+      @include bg-img("../img/home.png", no-repeat, cover);
+      @include flex(flex, column nowrap, flex-start, stretch);
 
-  body {
-    max-width: 1520px;
-    min-width: 1281px;
-    @include bg-img("../img/home.png", no-repeat, top center);
-    @include flex(flex, column nowrap, flex-start, stretch);
+      main {
+        #intro {
+          height: 670px;
+          background-color: $home-bgoverlay;
+          @include flex(flex, row nowrap, flex-end, center);
 
-    main {
-      width: 100%;
-      #intro {
-        height: 620px;
-        @include flex(flex, row nowrap, flex-end, center);
-
-        #intro-overlay {
-          display: none;
-          width: 100%;
-          height: 620px;
-          background-color: $bg-overlay;
-
-          #mob-intro {
-            display: none !important;
+          #intro-overlay {
+            display: none;
           }
 
-        }
-
-        #deskintro {
-          display: block;
+          #deskintro {
+            display: block;
             width: 50%;
-            text-align: right;
-            padding: 20px 50px 20px 0;
             margin: 0;
+            padding: 0 50px 0 0;
+            text-align: right;
+            line-height: 1.7;
+            font-size: 3.75rem;
+            font-weight: bold;
+            color: white;
           }
         }
       }
 
-  }
-}
+      #testimonials {
+        .carousel-inner {
+          width: 100%;
+          min-height: 344px;
+          @include flex(flex, column nowrap, center, center);
 
+          .carousel-item {
+            width: 60%;
+          }
+        }
+      }
+    }
+  }
 }
