--- a/sass/layout/_pages-main.scss
+++ b/sass/layout/_pages-main.scss
@@ -258,7 +258,7 @@ body {
         }
 
         .p-text {
-          width: 45%;
+          min-width: 45%;
           max-width: 800px;
           height: 100%;
           overflow-y: scroll;
