minor design changes

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,5 +1,6 @@
 $primary-color: #9f186c;
-$h1-color: #A0186C;
+$secondary-color: #A0186C;
+$h1-color: #696969;
 
 /* FOOTER */
 $footer-background-color: #f6f6f6;
@@ -13,3 +14,6 @@ $home-bgoverlay: rgba(0, 0, 0, 0.15);
 /* BUTTON COLORS */
 $button-primary: #E345A2;
 $button-hover: #CF3F94;
+
+/*$button-primary: #E345A2;
+$button-hover: #CF3F94;*/
