--- a/sass/pages.css
+++ b/sass/pages.css
@@ -1,6 +1,8 @@
 /* FOOTER */
 /* HOME */
 /* BUTTON COLORS */
+/*$button-primary: #E345A2;
+$button-hover: #CF3F94;*/
 /*background image */
 /*flexbox */
 /*link colors */
@@ -9,6 +11,8 @@
 /* FOOTER */
 /* HOME */
 /* BUTTON COLORS */
+/*$button-primary: #E345A2;
+$button-hover: #CF3F94;*/
 #mobnav {
   background-color: rgba(0, 0, 0, 0.15) !important; }
   #mobnav .navbar-brand {
@@ -112,22 +116,22 @@ body {
     margin: 0 auto;
     padding: 25px 0; }
     body main .p-content {
-      width: 100%;
+      width: 80%;
+      margin: 0 auto;
       text-align: justify;
       text-justify: inter-word; }
       body main .p-content .p-text h1 {
-        color: #A0186C;
+        color: #696969;
         font-size: 1.6rem;
         text-align: center;
-        margin-bottom: 16px; }
+        margin: 16px 0 30px 0; }
       body main .p-content .p-text p {
+        width: 100%;
         line-height: 1.5;
         font-size: 1rem;
-        margin: 0;
-        padding: 0 25px; }
-      body main .p-content .p-text .contactp {
-        padding: 0;
-        margin-bottom: 30px; }
+        margin: 0 auto; }
+      body main .p-content .p-text ul {
+        margin: 30px 0 0 0; }
       body main .p-content .p-text img {
         max-width: 100%;
         padding: 25px 0;
@@ -147,13 +151,15 @@ body {
         text-align: justify;
         text-justify: inter-word; }
         body main .p-content .p-text h1 {
-          color: #A0186C;
+          color: #696969;
           font-size: 1.6rem;
           text-align: center;
           margin-bottom: 16px; }
         body main .p-content .p-text p {
           font-size: 1rem;
-          padding: 0; } }
+          padding: 0; }
+        body main .p-content .p-text ul {
+          margin: 20px 0 0 0; } }
 /*TABLET LANDSCAPE*/
 @media only screen and (min-width: 628px) and (max-width: 1024px) and (orientation: landscape) {
   body {
@@ -237,6 +243,10 @@ body {
               font-size: 1rem;
               padding: 0 0 30px;
               text-align: justify; }
+            body main .p-content .p-text .paragraphs ul {
+              margin: 0 0 30px 0; }
+          body main .p-content .p-text .contactp {
+            padding: 0 0 20px; }
           body main .p-content .p-text .button-container {
             margin: 0 auto; } }
 /*DESKTOP HI-RES*/
@@ -302,13 +312,15 @@ body {
             padding-bottom: 20px;
             margin: 16px 0;
             text-align: left;
-            border-bottom: 2px solid #9f186c; }
+            border-bottom: 2px solid #A0186C; }
           body main .p-content .p-text .paragraphs {
             height: auto; }
             body main .p-content .p-text .paragraphs p {
               font-size: 1rem;
               padding: 0 0 30px;
               text-align: justify; }
+          body main .p-content .p-text .contactp {
+            padding: 0 0 20px 0; }
           body main .p-content .p-text .button-container {
             margin: 0 auto; } }
 
