--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -3,6 +3,9 @@
   background-image: url($url);
   background-repeat: $repeat;
   background-size: $size;
+  -o-background-size: $size;
+  -moz-background-size: $size;
+  -webkit-background-size: $size;
 }
 
 /*flexbox */
