form won't send without recaptcha being completed

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,6 +1,7 @@
 $primary-color: #9f186c;
 $secondary-color: #A0186C;
 $h1-color: #696969;
+$error: #FF3562;
 
 /* FOOTER */
 $footer-background-color: #f6f6f6;
@@ -14,6 +15,7 @@ $home-bgoverlay: rgba(0, 0, 0, 0.15);
 /* BUTTON COLORS */
 $button-primary: #E345A2;
 $button-hover: #CF3F94;
+
 
 /*$button-primary: #E345A2;
 $button-hover: #CF3F94;*/
