--- a/sass/component/_contact-form-style.scss
+++ b/sass/component/_contact-form-style.scss
@@ -16,14 +16,19 @@
       .has-error,
       .help-block,
       .with-errors {
-        li {
-          font-size: 0.8rem;
-          padding-left: 5px;
+        ul{
+          margin: 10px 0 0 0;;
+          li {
+            color: $error;
+            font-size: 0.8rem;
+            padding-left: 5px;
+          }
         }
+        
       }
     }
 
-    #submit-container {
+    #recaptcha-container {
       width: 100%;
     }
   }
