--- a/sass/pages.css
+++ b/sass/pages.css
@@ -86,14 +86,21 @@ body main .form-button {
     font-size: 0.9rem; }
   #form-container .controls .form-group {
     margin-bottom: 10px; }
-    #form-container .controls .form-group .form-group li,
-    #form-container .controls .form-group .has-danger li,
-    #form-container .controls .form-group .has-error li,
-    #form-container .controls .form-group .help-block li,
-    #form-container .controls .form-group .with-errors li {
-      font-size: 0.8rem;
-      padding-left: 5px; }
-  #form-container .controls #submit-container {
+    #form-container .controls .form-group .form-group ul,
+    #form-container .controls .form-group .has-danger ul,
+    #form-container .controls .form-group .has-error ul,
+    #form-container .controls .form-group .help-block ul,
+    #form-container .controls .form-group .with-errors ul {
+      margin: 10px 0 0 0; }
+      #form-container .controls .form-group .form-group ul li,
+      #form-container .controls .form-group .has-danger ul li,
+      #form-container .controls .form-group .has-error ul li,
+      #form-container .controls .form-group .help-block ul li,
+      #form-container .controls .form-group .with-errors ul li {
+        color: #FF3562;
+        font-size: 0.8rem;
+        padding-left: 5px; }
+  #form-container .controls #recaptcha-container {
     width: 100%; }
 
 body {
