footer, hires, colours

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,21 +1,33 @@
-$primary-color: #9f186c;
+/*$primary-color: #9f186c;
 $secondary-color: #A0186C;
-$h1-color: #696969;
+$h1-color: #696969;*/
 $error: #FF3562;
+$primary-color: #AA076B;
+$secondary-color: #A0186C;
+$h1-color: #919191;
+
 
 /* FOOTER */
 $footer-background-color: #f6f6f6;
 $footer-text-color: #5e3858;
 $links-icon-f: #AC88AD;
-$links-icon-fh: #330d22;
+$links-icon-fh: #DE0D92;
 
 /* HOME */
 $home-bgoverlay: rgba(0, 0, 0, 0.15);
 
 /* BUTTON COLORS */
-$button-primary: #E345A2;
-$button-hover: #CF3F94;
+$button-primary: #DE0D92;
+$button-hover: #E439A5;
 
 
 /*$button-primary: #E345A2;
 $button-hover: #CF3F94;*/
+
+/*$primary-color: #9f186c;
+$secondary-color: #A0186C;
+$h1-color: #696969;
+$text-color: #D1D1D1;
+$links-icon-f: #DE0D92;
+$links-icon-fh: #330d22;*
+#61045F #AA076B*/
