--- a/sass/component/_footer.scss
+++ b/sass/component/_footer.scss
@@ -1,9 +1,7 @@
 footer {
-  width: 100%;
-  height: 175px;
+  min-height: 245px;
   margin: 0 auto;
-  bottom: 0;
-  padding: 20px 10px 10px;
+  padding: 20px 10px 10px 10px;
   font-size: 0.8rem;
   text-align: center;
   line-height: 2;
@@ -21,10 +19,69 @@ footer {
   .fab {
     font-size: 1.25rem;
     color: $links-icon-f;
-    margin: 0 10px 16px;
+    margin: 5px 10px 16px;
 
     &:hover {
       color: $links-icon-fh;
     }
+  }
+
+  .contact-links {
+    margin: 10px 0;
+  }
+ 
+}
+
+
+/*TABLET PORTRAIT*/
+@media only screen and (min-width: 628px) and (max-width: 1024px) {
+  footer {
+    min-height: 194px;
+    .contact-links {
+      margin: 15px 0;
+    }
+    .jalika {
+      text-align: right;
+    }
+    .shennice {
+      text-align: left;
+    }
+  
+  }
+}
+
+/*TABLET LANDSCAPE*/
+@media only screen and (min-width: 628px) and (max-width: 1024px) and (orientation: landscape) {
+  footer {
+    min-height: 194px;
+    .contact-links {
+      margin: 15px 0;
+    }
+    .jalika {
+      text-align: right;
+    }
+    .shennice {
+      text-align: left;
+    }
+  
+  }
+  
+}
+
+/*DESKTOP*/
+@media only screen and (min-width: 1025px) and (max-width: 1280px) {
+
+  footer {
+    min-height: 194px;;
+    .contact-links {
+      margin: 15px 0;
+    }
+    .jalika {
+      text-align: right;
+    }
+    .shennice {
+      text-align: left;
+    }
+  
   }
 }
