--- a/sass/component/_header.scss
+++ b/sass/component/_header.scss
@@ -2,9 +2,10 @@
 
 #mobnav {
   background-color: $home-bgoverlay !important;
+  height: 82px;
 
   .navbar-brand {
-    color: #fff;
+    color: $primary-color;
     margin-right: 0;
 
     img {
@@ -14,11 +15,11 @@
   }
 
   .navbar-toggler {
-    color: #fff;
+    color: $primary-color;
     border-color: rgba(0, 0, 0, 0);
 
     .navbar-toggler-icon {
-      background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgb(255, 255, 255)' stroke-width='3' stroke-linecap='straight' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+      background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgb(170,7,107)' stroke-width='3' stroke-linecap='straight' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
     }
   }
 
