--- a/sass/main.css
+++ b/sass/main.css
@@ -1,40 +1,59 @@
+/*$primary-color: #9f186c;
+$secondary-color: #A0186C;
+$h1-color: #696969;*/
 /* FOOTER */
 /* HOME */
 /* BUTTON COLORS */
 /*$button-primary: #E345A2;
 $button-hover: #CF3F94;*/
+/*$primary-color: #9f186c;
+$secondary-color: #A0186C;
+$h1-color: #696969;
+$text-color: #D1D1D1;
+$links-icon-f: #DE0D92;
+$links-icon-fh: #330d22;*
+#61045F #AA076B*/
 /*background image */
 /*flexbox */
 /*link colors */
 /*primary button*/
 /*submit/success button */
+/*$primary-color: #9f186c;
+$secondary-color: #A0186C;
+$h1-color: #696969;*/
 /* FOOTER */
 /* HOME */
 /* BUTTON COLORS */
 /*$button-primary: #E345A2;
 $button-hover: #CF3F94;*/
+/*$primary-color: #9f186c;
+$secondary-color: #A0186C;
+$h1-color: #696969;
+$text-color: #D1D1D1;
+$links-icon-f: #DE0D92;
+$links-icon-fh: #330d22;*
+#61045F #AA076B*/
 #mobnav {
-  background-color: rgba(0, 0, 0, 0.15) !important; }
+  background-color: rgba(0, 0, 0, 0.15) !important;
+  height: 82px; }
   #mobnav .navbar-brand {
-    color: #fff;
+    color: #AA076B;
     margin-right: 0; }
     #mobnav .navbar-brand img {
       width: 20%;
       margin-right: 20px; }
   #mobnav .navbar-toggler {
-    color: #fff;
+    color: #AA076B;
     border-color: rgba(0, 0, 0, 0); }
     #mobnav .navbar-toggler .navbar-toggler-icon {
-      background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgb(255, 255, 255)' stroke-width='3' stroke-linecap='straight' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
+      background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgb(170,7,107)' stroke-width='3' stroke-linecap='straight' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
   #mobnav #navbarNavAltMarkup a.nav-item.nav-link.active {
     color: #fff; }
 
 footer {
-  width: 100%;
-  height: 175px;
+  min-height: 245px;
   margin: 0 auto;
-  bottom: 0;
-  padding: 20px 10px 10px;
+  padding: 20px 10px 10px 10px;
   font-size: 0.8rem;
   text-align: center;
   line-height: 2;
@@ -45,7 +64,7 @@ footer {
     footer a:visited {
       color: #AC88AD; }
     footer a:hover {
-      color: #330d22; }
+      color: #DE0D92; }
     footer a:active {
       color: #ca9ab5; }
   footer .phonenum {
@@ -53,27 +72,59 @@ footer {
   footer .fab {
     font-size: 1.25rem;
     color: #AC88AD;
-    margin: 0 10px 16px; }
+    margin: 5px 10px 16px; }
     footer .fab:hover {
-      color: #330d22; }
+      color: #DE0D92; }
+  footer .contact-links {
+    margin: 10px 0; }
 
+/*TABLET PORTRAIT*/
+@media only screen and (min-width: 628px) and (max-width: 1024px) {
+  footer {
+    min-height: 194px; }
+    footer .contact-links {
+      margin: 15px 0; }
+    footer .jalika {
+      text-align: right; }
+    footer .shennice {
+      text-align: left; } }
+/*TABLET LANDSCAPE*/
+@media only screen and (min-width: 628px) and (max-width: 1024px) and (orientation: landscape) {
+  footer {
+    min-height: 194px; }
+    footer .contact-links {
+      margin: 15px 0; }
+    footer .jalika {
+      text-align: right; }
+    footer .shennice {
+      text-align: left; } }
+/*DESKTOP*/
+@media only screen and (min-width: 1025px) and (max-width: 1280px) {
+  footer {
+    min-height: 194px; }
+    footer .contact-links {
+      margin: 15px 0; }
+    footer .jalika {
+      text-align: right; }
+    footer .shennice {
+      text-align: left; } }
 body main .button-container {
   margin: 30px auto;
   width: 80%; }
   body main .button-container #cta-button {
-    background-color: #E345A2;
-    border-color: #E345A2; }
+    background-color: #DE0D92;
+    border-color: #DE0D92; }
     body main .button-container #cta-button:hover {
-      background-color: #CF3F94;
-      border-color: #CF3F94; }
+      background-color: #E439A5;
+      border-color: #E439A5; }
 body main .form-button {
   /*margin: 0 auto;*/ }
   body main .form-button #send-button {
-    background-color: #E345A2;
-    border-color: #E345A2; }
+    background-color: #DE0D92;
+    border-color: #DE0D92; }
     body main .form-button #send-button:hover {
-      background-color: #CF3F94;
-      border-color: #CF3F94; }
+      background-color: #E439A5;
+      border-color: #E439A5; }
   body main .form-button #send-button {
     width: 100%;
     margin: 0 auto; }
@@ -125,22 +176,25 @@ body {
           color: white;
           vertical-align: middle;
           display: table-cell; }
-  body #testimonials .carousel-inner {
-    width: 100%;
-    min-height: 350px;
-    padding-top: 50px;
-    background-color: white; }
-    body #testimonials .carousel-inner .carousel-item {
-      width: 80%;
-      line-height: 2;
-      margin: 0 auto;
-      float: none; }
-      body #testimonials .carousel-inner .carousel-item .blockquote {
-        font-size: 1rem; }
-      body #testimonials .carousel-inner .carousel-item footer {
-        background-color: white; }
-  body #testimonials .carousel-indicators li {
-    background-color: #9f186c; }
+  body #testimonials {
+    padding-bottom: 50px; }
+    body #testimonials .carousel-inner {
+      width: 100%;
+      min-height: 350px;
+      padding-top: 50px;
+      background-color: white; }
+      body #testimonials .carousel-inner .carousel-item {
+        width: 80%;
+        line-height: 2;
+        margin: 0 auto;
+        float: none; }
+        body #testimonials .carousel-inner .carousel-item .blockquote {
+          font-size: 1rem; }
+        body #testimonials .carousel-inner .carousel-item footer {
+          height: auto;
+          background-color: white; }
+    body #testimonials .carousel-indicators li {
+      background-color: #AA076B; }
 
 /* ================================================================= */
 /*TABLET PORTRAIT*/
@@ -164,7 +218,7 @@ body {
   #testimonials .carousel-inner {
     padding: 130px 0 80px; } }
 /*DESKTOP*/
-@media only screen and (min-width: 1025px) and (max-width: 1280px) {
+@media only screen and (min-width: 1025px) and (max-width: 2000px) {
   body {
     max-width: 1280px;
     min-width: 1025px;
@@ -206,51 +260,5 @@ body {
       align-items: center; }
       body #testimonials .carousel-inner .carousel-item {
         width: 60%; } }
-/*DESKTOP HI-RES*/
-@media only screen and (min-width: 1281px) and (max-width: 2500px) {
-  html {
-    max-width: 100vw;
-    margin: 0 auto; }
-    html body {
-      max-width: 2500px;
-      min-width: 1281px;
-      background-image: url("../img/home.png");
-      background-repeat: no-repeat;
-      background-size: cover;
-      -o-background-size: cover;
-      -moz-background-size: cover;
-      -webkit-background-size: cover;
-      display: flex;
-      flex-flow: column nowrap;
-      justify-content: flex-start;
-      align-items: stretch; }
-      html body main #intro {
-        height: 670px;
-        background-color: rgba(0, 0, 0, 0.15);
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: flex-end;
-        align-items: center; }
-        html body main #intro #intro-overlay {
-          display: none; }
-        html body main #intro #deskintro {
-          display: block;
-          width: 50%;
-          margin: 0;
-          padding: 0 50px 0 0;
-          text-align: right;
-          line-height: 1.7;
-          font-size: 3.75rem;
-          font-weight: bold;
-          color: white; }
-      html body #testimonials .carousel-inner {
-        width: 100%;
-        min-height: 344px;
-        display: flex;
-        flex-flow: column nowrap;
-        justify-content: center;
-        align-items: center; }
-        html body #testimonials .carousel-inner .carousel-item {
-          width: 60%; } }
 
 /*# sourceMappingURL=main.css.map */
