--- a/sass/pages.css
+++ b/sass/pages.css
@@ -1,40 +1,59 @@
+/*$primary-color: #9f186c;
+$secondary-color: #A0186C;
+$h1-color: #696969;*/
 /* FOOTER */
 /* HOME */
 /* BUTTON COLORS */
 /*$button-primary: #E345A2;
 $button-hover: #CF3F94;*/
+/*$primary-color: #9f186c;
+$secondary-color: #A0186C;
+$h1-color: #696969;
+$text-color: #D1D1D1;
+$links-icon-f: #DE0D92;
+$links-icon-fh: #330d22;*
+#61045F #AA076B*/
 /*background image */
 /*flexbox */
 /*link colors */
 /*primary button*/
 /*submit/success button */
+/*$primary-color: #9f186c;
+$secondary-color: #A0186C;
+$h1-color: #696969;*/
 /* FOOTER */
 /* HOME */
 /* BUTTON COLORS */
 /*$button-primary: #E345A2;
 $button-hover: #CF3F94;*/
+/*$primary-color: #9f186c;
+$secondary-color: #A0186C;
+$h1-color: #696969;
+$text-color: #D1D1D1;
+$links-icon-f: #DE0D92;
+$links-icon-fh: #330d22;*
+#61045F #AA076B*/
 #mobnav {
-  background-color: rgba(0, 0, 0, 0.15) !important; }
+  background-color: rgba(0, 0, 0, 0.15) !important;
+  height: 82px; }
   #mobnav .navbar-brand {
-    color: #fff;
+    color: #AA076B;
     margin-right: 0; }
     #mobnav .navbar-brand img {
       width: 20%;
       margin-right: 20px; }
   #mobnav .navbar-toggler {
-    color: #fff;
+    color: #AA076B;
     border-color: rgba(0, 0, 0, 0); }
     #mobnav .navbar-toggler .navbar-toggler-icon {
-      background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgb(255, 255, 255)' stroke-width='3' stroke-linecap='straight' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
+      background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgb(170,7,107)' stroke-width='3' stroke-linecap='straight' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
   #mobnav #navbarNavAltMarkup a.nav-item.nav-link.active {
     color: #fff; }
 
 footer {
-  width: 100%;
-  height: 175px;
+  min-height: 245px;
   margin: 0 auto;
-  bottom: 0;
-  padding: 20px 10px 10px;
+  padding: 20px 10px 10px 10px;
   font-size: 0.8rem;
   text-align: center;
   line-height: 2;
@@ -45,7 +64,7 @@ footer {
     footer a:visited {
       color: #AC88AD; }
     footer a:hover {
-      color: #330d22; }
+      color: #DE0D92; }
     footer a:active {
       color: #ca9ab5; }
   footer .phonenum {
@@ -53,27 +72,59 @@ footer {
   footer .fab {
     font-size: 1.25rem;
     color: #AC88AD;
-    margin: 0 10px 16px; }
+    margin: 5px 10px 16px; }
     footer .fab:hover {
-      color: #330d22; }
+      color: #DE0D92; }
+  footer .contact-links {
+    margin: 10px 0; }
 
+/*TABLET PORTRAIT*/
+@media only screen and (min-width: 628px) and (max-width: 1024px) {
+  footer {
+    min-height: 194px; }
+    footer .contact-links {
+      margin: 15px 0; }
+    footer .jalika {
+      text-align: right; }
+    footer .shennice {
+      text-align: left; } }
+/*TABLET LANDSCAPE*/
+@media only screen and (min-width: 628px) and (max-width: 1024px) and (orientation: landscape) {
+  footer {
+    min-height: 194px; }
+    footer .contact-links {
+      margin: 15px 0; }
+    footer .jalika {
+      text-align: right; }
+    footer .shennice {
+      text-align: left; } }
+/*DESKTOP*/
+@media only screen and (min-width: 1025px) and (max-width: 1280px) {
+  footer {
+    min-height: 194px; }
+    footer .contact-links {
+      margin: 15px 0; }
+    footer .jalika {
+      text-align: right; }
+    footer .shennice {
+      text-align: left; } }
 body main .button-container {
   margin: 30px auto;
   width: 80%; }
   body main .button-container #cta-button {
-    background-color: #E345A2;
-    border-color: #E345A2; }
+    background-color: #DE0D92;
+    border-color: #DE0D92; }
     body main .button-container #cta-button:hover {
-      background-color: #CF3F94;
-      border-color: #CF3F94; }
+      background-color: #E439A5;
+      border-color: #E439A5; }
 body main .form-button {
   /*margin: 0 auto;*/ }
   body main .form-button #send-button {
-    background-color: #E345A2;
-    border-color: #E345A2; }
+    background-color: #DE0D92;
+    border-color: #DE0D92; }
     body main .form-button #send-button:hover {
-      background-color: #CF3F94;
-      border-color: #CF3F94; }
+      background-color: #E439A5;
+      border-color: #E439A5; }
   body main .form-button #send-button {
     width: 100%;
     margin: 0 auto; }
@@ -108,18 +159,18 @@ body {
   background-color: white;
   max-width: 640px;
   min-width: 320px;
-  min-height: calc(100vh - 175px);
   margin: 0 auto;
   display: flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: stretch; }
   body #mobnav {
-    background-color: #9f186c !important;
-    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05) !important; }
+    background-color: #fff !important;
+    border-bottom: 1px solid #F7F7F7;
+    /*box-shadow: 0 4px 12px 0 rgba(0,0,0,.03) !important;*/ }
   body main {
     width: 100%;
-    height: auto;
+    min-height: calc(100vh - 257px);
     margin: 0 auto;
     padding: 25px 0; }
     body main .p-content {
@@ -128,13 +179,13 @@ body {
       text-align: justify;
       text-justify: inter-word; }
       body main .p-content .p-text h1 {
-        color: #696969;
+        color: #AA076B;
         font-size: 1.6rem;
         text-align: center;
         margin: 16px 0 30px 0; }
       body main .p-content .p-text p {
         width: 100%;
-        line-height: 1.5;
+        line-height: 1.58;
         font-size: 1rem;
         margin: 0 auto; }
       body main .p-content .p-text ul {
@@ -158,10 +209,10 @@ body {
         text-align: justify;
         text-justify: inter-word; }
         body main .p-content .p-text h1 {
-          color: #696969;
+          color: #AA076B;
           font-size: 1.6rem;
           text-align: center;
-          margin-bottom: 16px; }
+          margin: 16px 0 30px 0; }
         body main .p-content .p-text p {
           font-size: 1rem;
           padding: 0; }
@@ -182,27 +233,28 @@ body {
       body main .p-content img {
         margin: 0 auto; } }
 /*DESKTOP*/
-@media only screen and (min-width: 1025px) and (max-width: 1280px) {
+@media only screen and (min-width: 1025px) and (max-width: 2000px) {
   body {
     max-width: 1280px;
     min-width: 1025px; }
     body #mobnav {
       background-color: rgba(0, 0, 0, 0) !important; }
       body #mobnav .navbar-brand {
-        color: #9f186c; }
+        color: #AA076B; }
       body #mobnav #navbarNavAltMarkup a.nav-item.nav-link.active {
-        color: #9f186c; }
+        color: #AA076B; }
     body main {
       width: 100%;
-      min-height: 768px;
+      min-height: calc(100vh - 276px);
       padding: 0;
       display: flex;
       flex-flow: column nowrap;
       justify-content: center;
       align-items: center; }
       body main .p-content {
-        width: 100%;
+        width: 95%;
         height: 100%;
+        margin: 20px auto;
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
@@ -254,7 +306,7 @@ body {
             padding-bottom: 20px;
             margin: 16px 0;
             text-align: left;
-            border-bottom: 2px solid #A0186C; }
+            border-bottom: 2px solid #AA076B; }
           body main .p-content .p-text .paragraphs {
             height: auto; }
             body main .p-content .p-text .paragraphs p {
@@ -265,89 +317,6 @@ body {
               margin: 0 0 30px 0; }
           body main .p-content .p-text .contactp {
             padding: 0 0 20px; }
-          body main .p-content .p-text .button-container {
-            margin: 0 auto; } }
-/*DESKTOP HI-RES*/
-@media only screen and (min-width: 1281px) and (max-width: 2500px) {
-  body {
-    max-width: 1281px;
-    min-width: 2500px; }
-    body #mobnav {
-      background-color: rgba(0, 0, 0, 0) !important;
-      border-bottom: 1px solid #f6f6f6; }
-      body #mobnav .navbar-brand {
-        color: #9f186c; }
-      body #mobnav #navbarNavAltMarkup a.nav-item.nav-link.active {
-        color: #9f186c; }
-    body main {
-      width: 100%;
-      min-height: 768px;
-      padding: 0;
-      display: flex;
-      flex-flow: column nowrap;
-      justify-content: center;
-      align-items: center; }
-      body main .p-content {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: space-between;
-        align-items: center; }
-        body main .p-content #who-left {
-          background-image: url("../img/who-we-are.png");
-          background-repeat: no-repeat;
-          background-size: cover;
-          -o-background-size: cover;
-          -moz-background-size: cover;
-          -webkit-background-size: cover;
-          background-position: center; }
-        body main .p-content #what-left {
-          background-image: url("../img/what-we-do-1.png");
-          background-repeat: no-repeat;
-          background-size: cover;
-          -o-background-size: cover;
-          -moz-background-size: cover;
-          -webkit-background-size: cover;
-          background-position: center; }
-        body main .p-content #contact-left {
-          background-image: url("../img/contact-us.png");
-          background-repeat: no-repeat;
-          background-size: cover;
-          -o-background-size: cover;
-          -moz-background-size: cover;
-          -webkit-background-size: cover;
-          background-position: center; }
-        body main .p-content .p-left {
-          display: block;
-          width: 55%;
-          min-height: 80%;
-          margin-left: 60px;
-          flex: 1 1 50%; }
-        body main .p-content .p-text {
-          min-width: 45%;
-          max-width: 800px;
-          height: 100%;
-          overflow-y: scroll;
-          flex: 1 1 50%;
-          padding: 60px;
-          margin: 0 auto; }
-          body main .p-content .p-text img {
-            display: none; }
-          body main .p-content .p-text h1 {
-            font-size: 1.9rem;
-            padding-bottom: 20px;
-            margin: 16px 0;
-            text-align: left;
-            border-bottom: 2px solid #A0186C; }
-          body main .p-content .p-text .paragraphs {
-            height: auto; }
-            body main .p-content .p-text .paragraphs p {
-              font-size: 1rem;
-              padding: 0 0 30px;
-              text-align: justify; }
-          body main .p-content .p-text .contactp {
-            padding: 0 0 20px 0; }
           body main .p-content .p-text .button-container {
             margin: 0 auto; } }
 
